--- a/style.css
+++ b/style.css
@@ -79,23 +79,23 @@ form .user-details .input-box input {
 }
 @MEDIA(min-width:900px) {
   .container{
-    max-width:80rem;
+    max-width:88rem;
   }
  
 }
 @MEDIA(min-width:700px) and (max-width:900px){
   .container{
-    max-width:60rem;
+    max-width:69rem;
   }
 }
 @MEDIA(min-width:500px) and (max-width:700px){
   .container{
-    max-width:40rem;
+    max-width:58rem;
   }
 }
 @MEDIA(min-width:400px) and (max-width:500px){
   .container{
-    max-width:30rem;
+    max-width:40rem;
   }
   .details{
     font-size:16px;
@@ -103,19 +103,37 @@ form .user-details .input-box input {
   form .user-details .input-box input {
     height: 4rem;
     font-size:1.2rem;
+    width:17rem;
   }
 
 }
-@MEDIA(min-width:300px) and (max-width:400px){
+@MEDIA(min-width:350px) and (max-width:400px){
   .container{
-    max-width:25rem;
+    max-width:38rem;
   }
   .details{
-    font-size:13px;
+    font-size:15px;
   }
   form .user-details .input-box input {
     height: 3rem;
     font-size:1rem;
+    width:15rem;
+  }
+
+}
+@MEDIA(min-width:300px) and (max-width:350px){
+  .container{
+    max-width:39rem;
+    padding:1.1rem;
+  }
+  .details{
+    font-size:15px;
+  }
+  form .user-details .input-box input {
+    height: 3rem;
+    font-size:1rem;
+    width:13rem;
+    padding-left:0.2rem;
   }
 
 }
